src/test/ui/type-alias-impl-trait/no_inferrable_concrete_type.stderr
error: could not find defining uses
  --> $DIR/no_inferrable_concrete_type.rs:6:1
   |
LL | type Foo = impl Copy;
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

